--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,9 +23,31 @@ jobs:
         cache: maven
     - name: Test with Maven
       run: mvn clean test --file pom.xml
-  deploy:
+  build:
     runs-on: ubuntu-latest
     needs: test
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: 21
+          distribution: 'temurin'
+          cache: maven
+      - name: Deploy site
+        run: mvn clean site --file pom.xml
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Upload Artifacts
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./target/site
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
     permissions:
       contents: read
       packages: write
@@ -42,16 +64,7 @@ jobs:
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
       - name: Deploy package
-        run: mvn --batch-mode clean site tomcat7:deploy --file pom.xml
+        run: mvn --batch-mode tomcat7:deploy
         env:
           MAVEN_USERNAME: ${{ secrets.TOMCAT_USER }}
           MAVEN_PASSWORD: ${{ secrets.TOMCAT_PASS }}
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Upload Artifacts
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: ./target/site
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
